# minesweeper

./: CMakeLists.txt  README.md
.cache/clangd/index/: BoardGenerationTests.cpp.9BD3705F307E3C19.idx  main.cpp.2BA95EC941DB460E.idx  main.cpp.DDF8D8FAB5F9EAE2.idx
src/: Coord.h  board.cpp  board.h  main.cpp  main.h
src/gamespace/: board.cpp  board.h  coord.h  timer.cpp
tests/: README.md  test.Header.h
